# hibp_rust

./: .gitignore  Cargo.toml  README.md
hibp/: Cargo.toml
hibp/src/: main.rs
hibp_benchmark/: Cargo.toml
hibp_benchmark/src/: main.rs
hibp_core/: Cargo.toml
hibp_core/src/: batch_transform.rs  concurrent_iterator.rs  db.rs  directio.rs  file_array.rs  indexbycopy.rs  lib.rs  md4_fast.rs  minbitrep.rs  thread_pool.rs  transform.rs  userfilecache.rs
hibp_core/tests/: test.rs  test_db.rs  test_minbitrep.rs
src/: bufferedio.rs  db.rs  error.rs  lib.rs  main.rs  md4_fast.rs  test.rs  util.rs
tests/: test.rs
