[package]
name = "hibp_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hibp_core = {path = "../hibp_core"}
md4 = "0.10.2"
thousands = "0.2.0"
rand = "0.8.5"
clap = { version = "4.4.11", features = ["derive"] }
rayon = "1.8.1"
