[package]
name = "hibp_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hibp_core"
path = "src/lib.rs"

[dependencies]
md4 = "0.10.2"
regex = "1.10.2"
hex = "0.4.3"
libc = "0.2.151"
rand = "0.8.5"
ring = "0.17.7"
memmap2 = "0.9.0"