[package]
name = "hibp_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hibp_core"
path = "src/lib.rs"

[dependencies]
md4 = "0.10.2"
regex = "1.10.2"
hex = "0.4.3"
libc = "0.2.151"
rand = "0.8.5"
memmap2 = "0.9.0"
concurrent-queue = "2.4.0"
crossbeam-channel = "0.5.9"
num_cpus = "1.16.0"
reqwest = "0.11.24"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
flate2 = "1.0.28"
bit-set = "0.5.3"
xz2 = "0.1.7"
chrono = "0.4.34"
serde = { version = "1.0.193", features = ["derive"] }
serde_cbor = "0.11.2"
rayon = "1.8.1"
once_cell = "1.19.0"
roaring = "0.10.3"
bit-vec = "0.6.3"
